# condidaria-project

./: Plan.MD  README.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20241110155737_products.down.sql  20241110155737_products.up.sql  20241123185053_categories.down.sql  20241123185053_categories.up.sql  20241123185157_add_foreignkey_for_prod.up.sql
backend/src/: main.rs
backend/src/api/: category.rs  mod.rs  products.rs
backend/src/database/: category_repository.rs  mod.rs  product_repository.rs
backend/src/models/: category.rs  product.rs
backend/src/utils/: errors.rs
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/components/: Navbar.vue
frontend/components/common/: Footer.vue  Navbar.vue
frontend/components/products/: ProductCard.vue
frontend/composables/: useApi.js  useProducts.js
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/categories/: [id].vue  index.vue
frontend/pages/products/: [id].vue  add.vue  index.vue
