[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "uuid"] }
serde = "1.0.214"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
